Design changes plus animations and transition timers.

--- a/html_css_files/landingpage3.html
+++ b/html_css_files/landingpage3.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <header class="topbar">
-    <h1 class="name">Lucas Szikszai</h1>
-    <div class="hseperator">
-        <a href="https://www.groelle.de/">Work</a>
-        <a href="https://github.com/smilefl0w">GitHub</a>
-        <a href="https://www.facebook.com/">Facebook</a>
-        <a href="https://www.facebook.com/">Contact</a>
-    </div>
+        <h1 class="name">Lucas Szikszai</h1>
+        <div>
+            <a href="https://www.groelle.de/">Work</a>
+        </div>
+        <div>
+            <a href="https://github.com/smilefl0w">GitHub</a>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/">Facebook</a>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/">Contact</a>
+        </div>
   </header>
 
-    <main>
+    <main id="main">
       <section id="section-a" class="grid">
          <div class="content-wrap">
 
@@ -28,7 +34,7 @@
 <!--            <p class="undertext">picture taken 2017</p>-->
 
              <div class="text">
-                 <h3>A brief introduction</h3>
+                 <h3>Introduction</h3>
                  <p>Hello! My name is Lucas Szikszai and I was born in 1990 in Germany.
                      I originally studied biology, but ended up taking a break to help my father out in his art gallery.
                      I have always been someone who is constantly learning new things and seeking out new experiences.
@@ -37,32 +43,25 @@
                      Overall, I am always looking for ways to challenge myself and grow both personally and professionally.
              </div>
 
-             <div class="text">
-                 <h3>Current occupation</h3>
-                 <p>As of now, I am currently working at Groelle pass:projects where I am responsible for managing the website and putting my design skills to practice by enhancing pictures of the art and exhibitions.
-                     In addition to these tasks, I am also responsible for storage management and supporting the artists by helping with communication and craftsmanship for installations.
-                     I pride myself on my problem-solving skills and am always looking for ways to improve processes and make the work environment more efficient. <br><br>
-                    Overall, my role at Groelle pass:projects is multifaceted and keeps me on my toes, but I enjoy the variety and challenges it brings.</p>
-             </div>
 
         </div>
       </section>
 
       <section id="section-b" class="grid">
         <div class="content-wrap">
-            <h2 class="content-title">Skills <span style="color: white; font-size: 90px;">&</span><br> Portfolio</h2>
-
+            <h2 class="content-title">Skills <span style="color: white; font-size: 90px;">&</span></h2>
+            <h2 class="content-titlep">Portfolio</h2>
             <hr class="rounded">
 
             <div class="text">
-              <h3 contenteditable> <span style="color: #FFDBAC; font-size: 20px;">E</span>ducation</h3>
+              <h3>Education</h3>
                 <p> Highschool Bayreuther Straße
                     <br>Abitur, Bergisches Kolleg
                     <br>University HHU Düsseldorf</p>
             </div>
 
             <div class="text">
-                <h3 contenteditable><span style="color: #FFDBAC; font-size: 20px;">S</span>kills</h3>
+                <h3>Skills</h3>
                   <p> Photoshop
                       <br> HTML
                       <br>CSS
@@ -70,10 +69,10 @@
             </div>
 
             <div class="text">
-                <h3 contenteditable><span style="color: #FFDBAC; font-size: 20px;">S</span>pecializations</h3>
-                <p>I am Backend focused Developer who enjoyes building the internal locig to guarantee fast,
-                    flexible and stable Applications. <br><br>Furthermore I bring moderate Frontend skills to help out in Design for Websites
-                aswell as Desktop-Applications that leads to the success of the overall product.</p>
+                <h3> Specializations</h3>
+                <p>I am Backend focused Developer who enjoyes building the internal logic to guarantee fast,
+                    flexible and stable Applications. <br><br>Furthermore I bring moderate Frontend skills to the table
+                    in order to design and build your Websites or Desktop-Applications that lead to the success of the overall product.</p>
             </div>
 
 
