--- a/html_css_files/landingpage3.html
+++ b/html_css_files/landingpage3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This page is about Lucas Szikszai his resume, coding portfolio and current occupation.">
     <link rel="stylesheet" type="text/css" href="styles3.css">
+    <title>Lucas Szikszai</title>
 </head>
 <body>
     <header class="topbar">
